[project]
name = "rengent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca>=1.0.0",
    "alpaca-py>=0.43.2",
    "dotenv>=0.9.9",
    "gnews>=0.4.3",
    "google-api-python-client>=2.194.0",
    "google-search-results>=2.4.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.8",
    "matplotlib>=3.10.8",
    "mcp>=1.27.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]
